# goit-web-homework-08

8.1/: main.py  pyproject.toml  seeds.py
8.1/src/: models.py
8.2/: consumer.py  models.py  producer.py  pyproject.toml
