[tool.poetry]
name = "8-2"
version = "0.1.0"
description = ""
authors = ["AnatoliiBrovko <116496024+AnatoliiBrovko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "8"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^18.13.0"
pika = "^1.3.2"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
